<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/padding_regular"
    android:paddingTop="@dimen/padding_regular"
    android:paddingRight="@dimen/padding_regular">

    <com.fibelatti.raffler.core.platform.TitleLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_regular"
        app:layout_constraintBottom_toTopOf="@+id/dividerPreferredRaffleMode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <include
        android:id="@+id/dividerPreferredRaffleMode"
        layout="@layout/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginBottom="@dimen/margin_regular"
        app:layout_constraintBottom_toTopOf="@+id/textViewPreferredRaffleModeTitle"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPreferredRaffleModeTitle"
        style="@style/AppTheme.Text.SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/preferences_preferred_raffle_mode_title"
        app:layout_constraintBottom_toTopOf="@+id/textViewPreferredRaffleModeMessage"
        app:layout_constraintTop_toBottomOf="@+id/dividerPreferredRaffleMode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPreferredRaffleModeMessage"
        style="@style/AppTheme.Text.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dividerRouletteMusic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonPreferredRaffleMode"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreferredRaffleModeTitle"
        tools:text="@string/custom_raffle_details_mode_roulette" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttonPreferredRaffleMode"
        style="@style/AppTheme.TextButton"
        android:layout_marginLeft="@dimen/margin_regular"
        android:text="@string/preferences_preferred_raffle_mode_button"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPreferredRaffleModeMessage"
        app:layout_constraintLeft_toRightOf="@+id/textViewPreferredRaffleModeMessage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPreferredRaffleModeMessage" />

    <include
        android:id="@+id/dividerRouletteMusic"
        layout="@layout/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        app:layout_constraintBottom_toTopOf="@+id/textViewRouletteMusicTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreferredRaffleModeMessage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRouletteMusicTitle"
        style="@style/AppTheme.Text.SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/preferences_roulette_music_title"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRouletteMusic"
        app:layout_constraintTop_toBottomOf="@+id/dividerRouletteMusic" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxRouletteMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences_roulette_music_description"
        app:layout_constraintBottom_toTopOf="@+id/dividerRememberRaffled"
        app:layout_constraintTop_toBottomOf="@+id/textViewRouletteMusicTitle" />

    <include
        android:id="@+id/dividerRememberRaffled"
        layout="@layout/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        app:layout_constraintBottom_toTopOf="@+id/textViewRememberRaffledTitle"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRouletteMusic" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRememberRaffledTitle"
        style="@style/AppTheme.Text.SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/preferences_remember_raffled_title"
        app:layout_constraintBottom_toTopOf="@+id/checkboxRememberRaffled"
        app:layout_constraintTop_toBottomOf="@+id/dividerRememberRaffled" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkboxRememberRaffled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/preferences_remember_raffled_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRememberRaffledTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
